# arena-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/: Box.glb  character.glb
docs/: 3D_CAMERA_TERRAIN_IMPLEMENTATION.md  IMPLEMENTATION_PROPOSAL.md  INDEX.md  JINX_CHAMPION_INDEX.md  JINX_IMPLEMENTATION_SUMMARY.md  JINX_REFERENCE_DESIGN.md  LOL_RESEARCH_MOVEMENT_ABILITIES_3D.md  MILESTONES.md  QUICK_REFERENCE_LOL_MECHANICS.md  UI_INGAME_HUD_DESIGN.md
docs/01-project-overview/: ARCHITECTURE_DECISIONS.md  MILESTONES.md  TECHNICAL_SPEC.md
docs/02-research/champions/: JINX_VISUAL_REFERENCE.md
docs/02-research/general/: LOL_RESEARCH_INDEX.md  RESEARCH_SUMMARY.md
docs/02-research/movement/: MOVEMENT_IMPLEMENTATION_GUIDE.md
docs/03-design/3d-rendering/: 3D_IMPLEMENTATION_PROPOSAL.md  3D_PROPOSAL_EXPANSION.md
docs/03-design/tools/: TOOLS_LAUNCHER_DESIGN.md
docs/03-design/ui/: UI_CHAT_DESIGN.md  UI_MAIN_MENU_DESIGN.md  UI_STEAM_FRIENDS_DESIGN.md
scripts/: generate_character.py
src/arena/: CMakeLists.txt  arena.h
src/arena/alloc/: arena_allocator.c  arena_allocator.h
src/arena/collections/: arena.h  array.h  hashmap.c  hashmap.h
src/arena/ecs/: components_3d.h  ecs.c  ecs.h
src/arena/game/: ability.c  ability.h  ai.c  ai.h  animation_system.c  animation_system.h  camera_system.c  camera_system.h  champion.c  champion.h  combat.c  combat.h  item.c  item.h  spawner.c  spawner.h
src/arena/input/: input.c  input.h
src/arena/map/: map.c  map.h
src/arena/math/: mat4.c  mat4.h  math.h  quat.c  quat.h  vec3.c  vec3.h  vec4.h
src/arena/network/: client.c  client.h  network.c  network.h  protocol.h  server.c  server.h
src/arena/server/: server.h
src/arena/world/: world.h
src/client/: CMakeLists.txt  main.c  test_3d.c  test_animation.c  test_animation_playback.c  test_cgltf_load.c  test_character_animation.c  test_character_load.c
src/renderer/: CMakeLists.txt  gltf_loader.c  gltf_loader.h  material.c  material.h  mesh.c  mesh.h  render_3d.c  render_3d.h  renderer.c  renderer.h  sprite_batch.c  sprite_batch.h  texture.c  texture.h
src/renderer/shaders/: mesh.frag  mesh.vert  quad.frag  quad.vert  skinned.vert  sprite.frag  sprite.vert  triangle.vert
src/server/: CMakeLists.txt  main.c
tools/arena-editor/: CMakeLists.txt
tools/asset-packer/: CMakeLists.txt
tools/entity-editor/: CMakeLists.txt
